--- a/app/css/default.styl
+++ b/app/css/default.styl
@@ -158,14 +158,26 @@ body
     display none
 
 .navbar-info
+  .nav-info
+    margin-top 12px
+  .my-account 
+    font-size 24px 
+    padding-right 15px
+    .ion-ios-person-outline
+      vertical-align middle
+      font-size 36px !important
   .shopping-cart
+    font-size 24px
+    padding-left 20px 
+    border-left 1px solid #ccc
     a
       font-size 24px
       font-weight 100
       &:hover
         text-decoration none
-    i
-      font-size 30px
+    .ion-ios-cart-outline
+      font-size 36px
+      vertical-align middle
 .shopping-cart a > i
   font-size 32px  !important
 ​
@@ -177,8 +189,9 @@ body
   text-align center
   border-radius 30px
   background-color cagreen
+  font-size 16px
   top 0px
-  right 95px
+  right 85px
   width 20px
   height 20px
 .shopcart-img
@@ -428,8 +441,6 @@ header
     color catext
     font-size 18px
     font-family "Roboto Slab, sans-serif"
-  i
-    font-size 22px
 
 /************** content area default ****************/
 .send-email
