--- a/app/templates/shop/payment-method.html
+++ b/app/templates/shop/payment-method.html
@@ -1,11 +1,8 @@
 <div id="content-area">
     <div class="row">
         <div class="paymentCont">
-            <div class="headingWrap">
-                <h3 class="headingTop text-center">Selecciona el método de pago</h3>
-                <p class="text-center"></p>
-            </div>
             <div class="paymentWrap">
+                <h3 class="info2 text-center"><i class="ion-cash"></i> Selecciona el método de pago</h3>
                 <div class="btn-group paymentBtnGroup btn-group-justified" data-toggle="buttons">
                     <label class="btn paymentMethod active">
                         <div class="method paypal"></div>
@@ -41,7 +38,7 @@
                                 <div class="form-group">
                                     <label for="cardNumber">NÚMERO DE TARJETA</label>
                                     <div class="input-group">
-                                        <input type="tel" class="form-control" name="cardNumber"
+                                        <input type="tel" class="form-control" name="cardNumber" id="cardNumber"
                                                placeholder="Número de tarjeta" autocomplete="cc-number" required
                                                autofocus/>
                                         <span class="input-group-addon"><i class="fa fa-credit-card"></i></span>
@@ -54,7 +51,7 @@
                                 <div class="form-group">
                                     <label for="cardExpiry"><span class="hidden-xs">FECHA DE EXPIRACIÓN</span>
                                         <span class="visible-xs-inline">EXP</span></label>
-                                    <input type="tel" class="form-control" name="cardExpiry" placeholder="MM / AA"
+                                    <input type="tel" class="form-control" name="cardExpiry" id="cardExpiry" placeholder="MM / AA"
                                            autocomplete="cc-exp" required
                                     />
                                 </div>
@@ -62,7 +59,7 @@
                             <div class="col-xs-5 col-md-5 pull-right">
                                 <div class="form-group">
                                     <label for="cardCVC">CÓDIGO CV</label>
-                                    <input type="tel" class="form-control" name="cardCVC" placeholder="CVC"
+                                    <input type="tel" class="form-control" name="cardCVC" id="cardCVC" placeholder="CVC"
                                            autocomplete="cc-csc" required/>
                                 </div>
                             </div>
@@ -71,13 +68,13 @@
                             <div class="col-xs-12">
                                 <div class="form-group">
                                     <label for="couponCode">COUPON CODE</label>
-                                    <input type="text" class="form-control" name="couponCode"/>
+                                    <input type="text" class="form-control" name="couponCode" id="couponCode"/>
                                 </div>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-xs-12">
-                                <button class="subscribe btn btn-cart btn-lg btn-block" type="button">Procesar Pago
+                                <button class="subscribe btn btn-cart btn-lg btn-block" ui-sref="shipping" type="button">Procesar Pago
                                 </button>
                             </div>
                         </div>
