--- a/app/css/responsive.styl
+++ b/app/css/responsive.styl
@@ -271,7 +271,7 @@
   .navbar-info a, .navbar-info a > i
     font-size 16px
   .qty-cart
-    right 45%
+    right 17%
   .navbar-info
     .col-sm-4 
       text-align center
@@ -576,6 +576,11 @@
     .menu-item
       margin-bottom 10px
 
+  .ca-phone, .ca-auth
+    text-align center
+  
+      
+  
 /* Wide Mobile Layout: 480px. */
 
 @media only screen and (min-width: 480px) and (max-width: 767px)
