--- a/app/css/default.styl
+++ b/app/css/default.styl
@@ -907,7 +907,7 @@ header
     h3
       font-size 24px
       padding 5px 0
-      color #746857
+      color #555
       font-weight bold
       margin-bottom 10px
       &:hover
@@ -1269,6 +1269,10 @@ header
           border-color rgba(0,0,0,.4)
           outline none !important
 /*PROFILE*/
+.ca-phone
+  text-align left
+.ca-auth
+  text-align right
 .content-profile
   padding 30px 0
   background-color #fff
