--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -1,13 +1,3 @@
-<div class="header-title-page">
-    <div class="img-title" style="background-image: url('../img/bg-header.jpg')">
-        <div class="title">
-            <h2>Bienvenido a nuestro blog</h2>
-            <small> Publicaciones acerca de nuestra aplicación, consejos para ayudarlo a usted y a sus seres queridos.
-            </small>
-
-        </div>
-    </div>
-</div>
 <section id="content-area" class="content-blog">
     <div class="container">
         <div class="row">
@@ -18,9 +8,8 @@
                         <div class="box-white col-sm-12 box-blog" ng-repeat="entry in Post.list">
                             <a post-link="{ link: {url: entry.link, target: '_blank'} }"
                                ui-sref="post_detail({slug: entry.slug})" title="{{ entry.title }}">
-
                                 <div class="simple-header col-md-4 col-sm-4">
-                                    <div class="img-box" style="background-image: url('{{ entry.urlImages.thumbnails ? entry.urlImages.thumbnails : initConfig.img_default }}')"></div>
+                                    <div class="img-box" style="background-image: url('{{ entry.featuredImage.url }}')"></div>
                                 </div>
                                 <div class="blog-container col-md-8 col-sm-8">
                                     <div class="height-title"><h3>{{ entry.title }}</h3></div>
@@ -29,7 +18,7 @@
                                         <p><span><i class="fa fa-calendar-"></i></span>
                                             {{ entry.createdAt | date : shortDate }} </p>
                                     </div>
-                                    <button class="btn btn-red">Ver más <i class="fa fa-angle-right"></i></button>
+                                    <button class="btn btn-reg">Ver más <i class="fa fa-angle-right"></i></button>
                                 </div>
                             </a>
                         </div>
