--- a/app/css/default.styl
+++ b/app/css/default.styl
@@ -1198,7 +1198,7 @@ header
       position absolute
       top 0
       left  0
-      background rgba(0, 0, 0, 0.48)
+      background #ccc
     .heading
       position relative
       text-align center
@@ -1208,21 +1208,17 @@ header
       transform translateY(-50%)
       i
         background transparent
-        border-radius 50%
-        border 1px solid #ffffff
-        color #ffffff
+        color cablack
         display block
-        font-size 2.2em
-        height 60px
+        font-size 6em
         line-height 60px
         margin auto auto 10px
         text-align center
-        width 60px
         -webkir-transition all 0.3s
         -webkit-transition all 0.3s
         transition all 0.3s
       h2
-        color #fff
+        color cablack
         font-size 25px
         text-align center
         margin 0
@@ -1230,7 +1226,7 @@ header
         font-weight 500
       h5
         font-size 16px
-        color #fff
+        color cablack
 .alert-payment
   color #f5f5f5
   background-color #565656
