--- a/app/templates/auth/address-new.html
+++ b/app/templates/auth/address-new.html
@@ -87,8 +87,8 @@
 
                                         </div>
                                         <div class="col-xs-12 col-md-6">
-                                            <div class="form-item">
-                                                <label for="mobile" ng-class="{ 'has-error': Form.mobile.$touched && Form.mobile.$invalid }">Celular</label>
+                                            <div class="form-item" ng-class="{ 'has-error': Form.mobile.$touched && Form.mobile.$invalid }">
+                                                <label for="mobile">Celular</label>
                                                 <input ng-model="Address.formData.mobile" type="text" ng-maxlength="20" class="form-control" id="mobile"
                                                        name="mobile"
                                                        placeholder="Celular" required>
@@ -97,7 +97,7 @@
                                         </div>
                                         <div class="col-md-12 text-center" style="padding-top: 30px;">
                                             <button type="submit" class="btn btn-outline-red"
-                                                    ng-disabled="Address.$invalid || Address.busy">
+                                                    ng-disabled="Address.busy">
                                                 <i class="ion-android-done"></i> Guardar <span ng-if="Address.busy"><i
                                                     class="fa fa-spinner fa-spin"></i></span>
                                             </button>
