--- a/app/templates/auth/dashboard.html
+++ b/app/templates/auth/dashboard.html
@@ -7,11 +7,10 @@
         </div>
         <div class="col-sm-6 col-md-3 menu-dash" ui-sref="sales">
             <div data-url_target="about_us" class="profile-btn menu_button menu-item">
-                <img alt="" src="../../img/about.jpg">
                 <div class="mask">
                 </div>
                 <div class="heading">
-                    <i class="ion-bag hidden-xs"></i>
+                    <i class="ion-bag"></i>
                     <h2>Historial</h2>
                     <h5>de compras</h5>
                 </div>
@@ -19,36 +18,33 @@
         </div>
         <div class="col-sm-6 col-md-3 menu-dash" ui-sref="address">
             <div data-url_target="about_us" class="profile-btn menu_button menu-item">
-                <img alt="" src="../../img/about.jpg">
                 <div class="mask">
                 </div>
                 <div class="heading">
-                    <i class="ion-location hidden-xs"></i>
+                    <i class="ion-location"></i>
                     <h2>Mis</h2>
                     <h5>direcciones</h5>
 
                 </div>
             </div>
         </div>
-        <div class="col-md-3 menu-dash" ui-sref="address-add">
+        <div class="col-sm-6 col-md-3 menu-dash" ui-sref="address-add">
             <div data-url_target="about_us" class="profile-btn menu_button menu-item">
-                <img alt="" src="../../img/about.jpg">
                 <div class="mask">
                 </div>
                 <div class="heading">
-                    <i class="ion-compose hidden-xs"></i>
+                    <i class="ion-compose"></i>
                     <h2>Agregar</h2>
                     <h5>dirección</h5>
                 </div>
             </div>
         </div>
-        <div class="col-md-3 menu-dash" ui-sref="profile">
+        <div class="col-sm-6 col-md-3 menu-dash" ui-sref="profile">
             <div data-url_target="about_us" class="profile-btn menu_button menu-item">
-                <img alt="" src="../../img/about.jpg" style="width: 100%; height: auto;">
                 <div class="mask">
                 </div>
                 <div class="heading">
-                    <i class="ion-ios-person hidden-xs"></i>
+                    <i class="ion-ios-person"></i>
                     <h2>Información</h2>
                     <h5>personal</h5>
                 </div>
