--- a/app/templates/auth/account-profile.html
+++ b/app/templates/auth/account-profile.html
@@ -15,8 +15,7 @@
                                         <div class="col-xs-12 col-md-6">
                                             <div class="form-item">
                                                 <label for="name">Nombre</label>
-
-                                                <input type="text" class="form-control" id="name" name="name"
+                                                <input ng-model="Profile.formData.firstName" type="text" class="form-control" id="name" name="name"
                                                        placeholder="Nombre"
                                                        required>
                                             </div>
