--- a/app/templates/shop/payment-method.html
+++ b/app/templates/shop/payment-method.html
@@ -74,7 +74,7 @@
                         </div>
                         <div class="row">
                             <div class="col-xs-12">
-                                <button class="subscribe btn btn-cart btn-lg btn-block" ui-sref="shipping" type="button">Procesar Pago
+                                <button ng-click="Payment.createOrder()" class="subscribe btn btn-cart btn-lg btn-block" ui-sref="shipping" type="button">Procesar Pago
                                 </button>
                             </div>
                         </div>
