--- a/app/templates/shop/shipping-address.html
+++ b/app/templates/shop/shipping-address.html
@@ -10,7 +10,7 @@
                         <div class="col-xs-12 col-sm-6 col-md-12">
                             <div class="col-md-offset-3 col-md-6">
                                 <div class="form-item">
-                                    <label for="address1">Elije una direccion de envio</label>
+                                    <label for="address1">Selecciona una direccion de envio</label>
                                     <ui-select on-select="Payment.selectedAddress($model)"
                                     ng-model="Payment.formDataPay.address" id="address1" name="address1"
                                                title="Direccion" required>
@@ -22,91 +22,6 @@
                                             <div ng-bind-html="address.address | highlight: $select.search"></div>
                                         </ui-select-choices>
                                     </ui-select>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-xs-12 col-sm-6 col-md-12">
-                            <div class="col-md-6">
-                                <div class="form-group"
-                                     ng-class="{ 'has-error': paymentForm.firstName.$touched && paymentForm.firstName.$invalid }">
-                                    <label for="address">Dirección</label>
-                                    <input type="text" ng-model="Payment.formDataPay.address" class="form-control"
-                                           id="address" name="address" required>
-                                    <div class="help-block" ng-messages="paymentForm.firstName.$error"
-                                         ng-if="paymentForm.firstName.$touched">
-                                        <div ng-message="required">El campo dirección es requerido</div>
-                                    </div>
-                                </div>
-                                <div class="form-group">
-                                    <label for="name">Teléfono celular(*)</label>
-                                    <input type="text" class="form-control" id="mobile" name="mobile">
-
-                                </div>
-                            </div>
-                            <div class="col-md-6">
-                                <div class="form-group">
-                                    <label for="">Apellidos(*)</label>
-                                    <input type="text" class="form-control" id="">
-
-                                </div>
-                                <div class="form-group">
-                                    <label for="">Teléfono fijo (opcional)</label>
-                                    <input type="text" class="form-control" id="phone" name="phone">
-
-                                </div>
-                            </div>
-                            <div class="col-md-6">
-                                <div class="form-group"
-                                     ng-class="{ 'has-error': paymentForm.address.$touched && paymentForm.address.$invalid }">
-                                    <label for="address">Dirección</label>
-                                    <input type="text" ng-model="Payment.formData.phone" class="form-control"
-                                           id="address" name="address" required>
-                                    <div class="help-block" ng-messages="paymentForm.address.$error"
-                                         ng-if="paymentForm.address.$touched">
-                                        <div ng-message="required">El campo dirección es requerido</div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-md-3">
-                                <div class="form-group">
-                                    <label for="name">N° Exterior</label>
-                                    <input type="text" class="form-control" id="name">
-
-                                </div>
-                            </div>
-                            <div class="col-md-3">
-                                <div class="form-group">
-                                    <label for="zip">N° Interior (opcional)</label>
-                                    <input type="text" class="form-control" id="">
-
-                                </div>
-                            </div>
-                            <div class="col-md-6">
-                                <div class="form-group">
-                                    <label for="name">Estado</label>
-                                    <input type="text" class="form-control" id="name">
-
-                                </div>
-                            </div>
-                            <div class="col-md-6">
-                                <div class="form-group">
-                                    <label for="city">Ciudad</label>
-                                    <input type="text" class="form-control" id="city">
-
-                                </div>
-                            </div>
-                            <div class="col-md-6">
-                                <div class="form-group">
-                                    <label for="zip">Código postal</label>
-                                    <input type="text" class="form-control" id="zip" name="zip">
-
-                                </div>
-                            </div>
-                            <div class="col-md-6">
-                                <div class="form-group">
-                                    <label for="neighborhood">Colonia</label>
-                                    <input type="text" class="form-control" id="neighborhood" name="neighborhood">
-
                                 </div>
                             </div>
                         </div>
