--- a/app/css/default.styl
+++ b/app/css/default.styl
@@ -463,6 +463,10 @@ header
     color white
     font-size 2.5em
     padding 20px 0
+.content-area2
+  margin 0
+  padding 70px 0
+  background-color #fff    
 #content-area
   margin 0
   padding 70px 25px
