--- a/app/css/main.css
+++ b/app/css/main.css
@@ -529,6 +529,11 @@ header {
   font-size: 2.5em;
   padding: 20px 0;
 }
+.content-area2 {
+  margin: 0;
+  padding: 70px 0;
+  background-color: #fff;
+}
 #content-area {
   margin: 0;
   padding: 70px 25px;
