--- a/app/templates/shop/payment-method.html
+++ b/app/templates/shop/payment-method.html
@@ -1,91 +1,114 @@
 <div id="content-area">
-    <div class="row">
-        <div class="paymentCont">
-            <div class="paymentWrap">
-                <h3 class="info2 text-center"><i class="ion-cash"></i> Selecciona el método de pago</h3>
-                <div class="btn-group paymentBtnGroup btn-group-justified" data-toggle="buttons">
-                    <label class="btn paymentMethod active">
-                        <div class="method paypal"></div>
-                        <input type="radio" name="options" checked>
-                    </label>
-                    <label class="btn paymentMethod">
-                        <div class="method bank-deposit"></div>
-                        <input type="radio" name="options">
-                    </label>
-                    <label class="btn paymentMethod">
-                        <div class="method credit-card"></div>
-                        <input type="radio" name="options">
-                    </label>
-                </div>
+    <div class="container">
+        <div class="col-md-6">
+            <div class="col-md-6">Informa</div>
+            <div class="col-md-6"></div>
+            <div class="col-md-12">
+                <h3>Direccíon de envío</h3>
+                <form action="" class="form-horizontal">
+                    <div class="col-md-6">
+                        <div class="form-item">
+                            <label for="state">Estado</label>
+                            <ui-select on-select="Address.getCitiesByState($model)"
+                                       title="Estado" ng-model="Address.formData.state"
+                                       name="states"
+                                       id="state" required>
+                                <ui-select-match placeholder="Selecciona un Estado *..."
+                                                 allow-clear="true">
+                                    {{$select.selected.name}}
+                                </ui-select-match>
+                                <ui-select-choices
+                                        repeat="state.id as state in Address.states | filter: {name: $select.search}">
+                                    <div ng-bind-html="state.name | highlight: $select.search"></div>
+                                </ui-select-choices>
+                            </ui-select>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="form-item">
+                            <label for="city">Ciudad</label>
+                            <ui-select ng-model="Address.formData.city" id="city" name="cities"
+                                       ng-required="Address.formData.state" ng-disabled="Address.busyCity"
+                                       title="Ciudad" required>
+                                <ui-select-match placeholder="Selecciona una Ciudad *..." allow-clear="true">
+                                    {{$select.selected.name}}
+                                </ui-select-match>
+                                <ui-select-choices
+                                        repeat="city.id as city in Address.cities | filter: {name: $select.search}">
+                                    <div ng-bind-html="city.name | highlight: $select.search"></div>
+                                </ui-select-choices>
+                            </ui-select>
+                        </div>
+
+                    </div>
+                    <div class="col-md-12">
+                        <div class="form-item"
+                             ng-class="{ 'has-error': Form.address.$touched && Form.address.$invalid }">
+                            <label for="address">Dirección</label>
+                            <input ng-model="Address.formData.address" type="text"
+                                   class="form-control" id="address" name="address"
+                                   placeholder="Dirección"
+                                   required>
+                            <span ng-messages="Form.address.$error" ng-if="Form.address.$touched">
+                                                    <a ng-message="required" data-toggle="tooltip" title="Holiis"></a>
+                            </span>
+                        </div>
+                    </div>
+                    <div class="col-xs-12 col-md-8">
+                        <div class="form-item"
+                             ng-class="{ 'has-error': Form.neighborhood.$touched && Form.neighborhood.$invalid }">
+                            <label for="neighborhood">Colonia</label>
+                            <input ng-model="Address.formData.neighborhood" type="text" class="form-control"
+                                   id="neighborhood"
+                                   name="neighborhood"
+                                   placeholder="Colonia"
+                                   required>
+                        </div>
+                    </div>
+                    <div class="col-xs-12 col-md-4">
+                        <div class="form-item" ng-class="{ 'has-error': Form.zip.$touched && Form.zip.$invalid }">
+                            <label for="zip">Código Postal</label>
+                            <input ng-model="Address.formData.zip" type="text" ng-pattern="/^[0-9]{5}$/" maxlength="5"
+                                   class="form-control" id="zip" name="zip"
+                                   placeholder="Código Postal"
+                                   required>
+                        </div>
+                    </div>
+                    <div class="col-xs-12 col-md-6">
+                        <div class="form-item" ng-class="{ 'has-error': Form.phone.$touched && Form.phone.$invalid }">
+                            <label for="phone">Teléfono</label>
+                            <input ng-model="Address.formData.phone" type="text" maxlength="20" class="form-control"
+                                   id="phone"
+                                   name="phone"
+                                   placeholder="Teléfono" required>
+                        </div>
+
+                    </div>
+                    <div class="col-xs-12 col-md-6">
+                        <div class="form-item" ng-class="{ 'has-error': Form.mobile.$touched && Form.mobile.$invalid }">
+                            <label for="mobile">Celular</label>
+                            <input ng-model="Address.formData.mobile" type="text" ng-maxlength="20" class="form-control"
+                                   id="mobile"
+                                   name="mobile"
+                                   placeholder="Celular" required>
+                        </div>
+
+                    </div>
+                    <div class="col-md-12">
+                        <input type="checkbox"> <span>Guardar mi información para la aproxima ocasión</span>
+                    </div>
+                    <div class="col-md-12 text-center" style="margin-top: 20px">
+                        <div class="col-md-6"><a href="">Regresar al carrito</a></div>
+                        <div class="col-md-6">
+                            <button class="btn btn-cart" ui-sref="checkout">Continuar</button>
+                        </div>
+                    </div>
+                </form>
             </div>
         </div>
-    </div>
-    <div class="row">
-        <div class="col-xs-12 col-md-offset-4 col-md-4">
-            <div class="panel panel-default credit-card-box">
-                <div class="panel-heading display-table">
-                    <!--<div class="row display-tr">
-                        <h3 class="panel-title display-td">Payment Details</h3>
-                        <div class="display-td">
-                            <img class="img-responsive pull-right" src="http://i76.imgup.net/accepted_c22e0.png">
-                        </div>
-                    </div>-->
-                </div>
-                <div class="panel-body">
-                    <form role="form" id="payment-form" method="POST" action="javascript:void(0);">
-                        <div class="row">
-                            <div class="col-xs-12">
-                                <div class="form-group">
-                                    <label for="cardNumber">NÚMERO DE TARJETA</label>
-                                    <div class="input-group">
-                                        <input type="tel" class="form-control" name="cardNumber" id="cardNumber"
-                                               placeholder="Número de tarjeta" autocomplete="cc-number" required
-                                               autofocus/>
-                                        <span class="input-group-addon"><i class="fa fa-credit-card"></i></span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-xs-7 col-md-7">
-                                <div class="form-group">
-                                    <label for="cardExpiry"><span class="hidden-xs">FECHA DE EXPIRACIÓN</span>
-                                        <span class="visible-xs-inline">EXP</span></label>
-                                    <input type="tel" class="form-control" name="cardExpiry" id="cardExpiry" placeholder="MM / AA"
-                                           autocomplete="cc-exp" required
-                                    />
-                                </div>
-                            </div>
-                            <div class="col-xs-5 col-md-5 pull-right">
-                                <div class="form-group">
-                                    <label for="cardCVC">CÓDIGO CV</label>
-                                    <input type="tel" class="form-control" name="cardCVC" id="cardCVC" placeholder="CVC"
-                                           autocomplete="cc-csc" required/>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-xs-12">
-                                <div class="form-group">
-                                    <label for="couponCode">COUPON CODE</label>
-                                    <input type="text" class="form-control" name="couponCode" id="couponCode"/>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-xs-12">
-                                <button ng-click="Payment.createOrder()" class="subscribe btn btn-cart btn-lg btn-block" ui-sref="shipping" type="button">Procesar Pago
-                                </button>
-                            </div>
-                        </div>
-                        <div class="row" style="display:none;">
-                            <div class="col-xs-12">
-                                <p class="payment-errors"></p>
-                            </div>
-                        </div>
-                    </form>
-                </div>
-            </div>
+        <div class="col-md-6">
+            <ng-include src="'/templates/shop/partials/cart-details.html'"></ng-include>
         </div>
     </div>
 </div>
+
