--- a/app/css/default.styl
+++ b/app/css/default.styl
@@ -1231,6 +1231,8 @@ header
       h5
         font-size 16px
         color cablack
+.panel-default > .panel-white
+  background #fff
 .alert-payment
   color #f5f5f5
   background-color #565656
