--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1461,6 +1461,9 @@ color
   font-size: 16px;
   color: #323232;
 }
+.panel-default > .panel-white {
+  background: #fff;
+}
 .alert-payment {
   color: #f5f5f5;
   background-color: #565656;
