--- a/app/css/default.styl
+++ b/app/css/default.styl
@@ -443,6 +443,16 @@ header
     font-family "Roboto Slab, sans-serif"
 
 /************** content area default ****************/
+.address-form
+  border-right 1px solid #ddd
+.items-incart
+  padding 15px 0
+.details-prodpay
+  padding-top 20px
+.mxn
+  font-size: 10px
+  color #565656
+  padding-right 5px
 .send-email
   padding-bottom 10px
 .info
