--- a/app/templates/shop/shopcart.html
+++ b/app/templates/shop/shopcart.html
@@ -77,6 +77,7 @@
                             </tbody>
                         </table>
                         <a class="btn btn-success btn-cart btn-block" ng-click="ShopCart.processPurchase()">Procesar compra</a>
+                        <a class="btn btn-success btn-paypal btn-block"><i class=""></i>Pagar con Paypal</a>
                     </div>
                 </div>
             </div>
